# flipkart-pvs

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/benchmarks/: benchmark_db.py  benchmark_parsing.py  profile_full_ingest.py  scratch_test.py  test_worker_configs.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2026-06-06_initial_schema.py  2026-06-07_ai_processing_settings.py
backend/src/app/: config.py  dependencies.py  main.py
backend/src/auth/: dependencies.py  exceptions.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
backend/src/domain/: exceptions.py
backend/src/domain/interfaces/: __init__.py  ai_provider.py  cache.py  repositories.py  storage.py
backend/src/infrastructure/: bulk_loader.py  database.py  redis.py
backend/src/infrastructure/ai/: factory.py  gemini.py
backend/src/products/: exceptions.py  ingestion_models.py  ingestion_repository.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/reports/: router.py  schemas.py  service.py
backend/src/settings/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/shared/: datetime_utils.py  pagination.py
backend/src/validation/: ai_processing_service.py  ai_utils.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  e2e_test.py
backend/tests/unit/: test_bulk_loader.py  test_product_service.py  test_validation_service.py
docs/: API-CONTRACTS.md  ARCHITECTURE.md  DATA-MODEL.md  DEPLOYMENT.md
frontend/: .env.example  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.js
frontend/src/api/: auth.d.ts  auth.js  auth.ts  client.d.ts  client.js  client.ts  products.d.ts  products.js  products.ts  reports.d.ts  reports.js  reports.ts  settings.d.ts  settings.ts  types.d.ts  types.js  types.ts  validation.d.ts  validation.js  validation.ts
frontend/src/components/common/: AIStatusBadge.d.ts  AIStatusBadge.tsx  BarcodeScanner.d.ts  BarcodeScanner.tsx  CameraCapture.d.ts  CameraCapture.js  CameraCapture.tsx  DateRangePicker.d.ts  DateRangePicker.js  DateRangePicker.tsx  EmptyState.d.ts  EmptyState.js  EmptyState.tsx  FileDropzone.d.ts  FileDropzone.js  FileDropzone.tsx  PageHeader.d.ts  PageHeader.js  PageHeader.tsx  PaginationBar.d.ts  PaginationBar.tsx  ProgressBar.d.ts  ProgressBar.js  ProgressBar.tsx  StatsCard.d.ts  StatsCard.js  StatsCard.tsx  StatusBadge.d.ts  StatusBadge.js  StatusBadge.tsx
frontend/src/components/layout/: AppLayout.d.ts  AppLayout.js  AppLayout.tsx  Header.d.ts  Header.js  Header.tsx  IntelligencePanel.d.ts  IntelligencePanel.tsx  ProtectedRoute.d.ts  ProtectedRoute.js  ProtectedRoute.tsx  Sidebar.d.ts  Sidebar.js  Sidebar.tsx
frontend/src/components/ui/: Badge.d.ts  Badge.js  Badge.tsx  Button.d.ts  Button.js  Button.tsx  Card.d.ts  Card.js  Card.tsx  Dialog.d.ts  Dialog.js  Dialog.tsx  Input.d.ts  Input.js  Input.tsx  Select.d.ts  (+14 more)
frontend/src/contexts/: ThemeContext.d.ts  ThemeContext.tsx
frontend/src/hooks/: useAuth.d.ts  useAuth.js  useAuth.ts  useCamera.d.ts  useCamera.js  useCamera.ts  useTheme.js  useTheme.ts
frontend/src/pages/: AdminPage.d.ts  AdminPage.js  AdminPage.tsx  LoginPage.d.ts  LoginPage.js  LoginPage.tsx  NotFoundPage.d.ts  NotFoundPage.js  NotFoundPage.tsx  OperatorPage.d.ts  OperatorPage.js  OperatorPage.tsx  ReportsPage.d.ts  ReportsPage.js  ReportsPage.tsx  UploadPage.d.ts  UploadPage.js  UploadPage.tsx
frontend/src/stores/: authStore.d.ts  authStore.js  authStore.ts  uploadStore.d.ts  uploadStore.js  uploadStore.ts
frontend/src/styles/: globals.css
