[project]
name = "flipkart-pvs"
version = "1.0.0"
description = "Flipkart Product Verification System — Production-grade supply chain validation platform"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # Validation & Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Authentication
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # HTTP client (for AI provider)
    "httpx>=0.28.0",

    # Async file I/O
    "aiofiles>=24.1.0",

    # Retry logic
    "tenacity>=9.0.0",

    # Observability
    "logfire[fastapi,sqlalchemy,redis,httpx]>=3.0.0",

    # CSV processing
    "aiocsv>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a0",
]

# ---------------------------------------------------------------------------
# Ruff — Linting & Formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv", "dist", "build", "migrations/versions", "benchmarks"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RUF",  # Ruff-specific rules
]
ignore = ["E501", "B008", "S108", "T201", "S311", "RUF001", "DTZ007", "SIM105", "S110", "S608", "RUF003", "UP046", "UP047", "F821", "C416", "F841", "E402", "S105", "S106", "S107", "E712", "RUF002"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]  # Allow assert and hardcoded passwords in tests
"__init__.py" = ["F401"]             # Allow unused imports in __init__

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty — Type Checking
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
incompatible-assignment = "error"
missing-argument = "error"

[tool.ty.src]
include = ["src"]
exclude = ["migrations/"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring database",
]

# ---------------------------------------------------------------------------
# Build System
# ---------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
